syntax = "proto3";

package api;

import "google/protobuf/empty.proto";

service Tunnel {
  rpc List(google.protobuf.Empty) returns (TunnelsData) {}
  rpc Get(TunnelRequest) returns (TunnelsData) {}
  rpc Add(TunnelData) returns (TunnelData) {}
  rpc Delete(TunnelRequest) returns (TunnelData) {}
  rpc Update(TunnelData) returns (TunnelData) {}
}

message TunnelData {
  optional int32 ID = 1;
  optional int32 version = 2;
  int32 router = 3;
  string IP = 4;
  optional bool dynamic_ip = 5;
  optional int32 ip_class = 6;
  string hostname = 7;
  string description = 8;
  string source = 9;
  optional int32 cost = 10;
  optional string tunnel_type = 11;
  optional string topology_type = 12;
}

/* List method */
message TunnelsData {
  repeated TunnelData tunnels = 1;
}

/* Get method */
message TunnelRequest {
  oneof id_or_router {
    int32 ID = 1;
    int32 router = 2;
  }
}
